WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2005-09-15


Version 0.1.5 (under dev!):
   * fixed IRC message parser bug
   * fixed scroll problem (screen moving when scrolling and new line
     displayed)
   * fixed infinite loop when scrolling back and displaying long lines
   * fixed crash when closing a buffer used by more than one window
   * added some missing IRC commands
   * fixed DCC display bug (now decodes string according to charset)
   * added /ignore and /unignore commands
   * fixed bug with strings comparison (str[n]casecmp) and some locales
     (like turkish), now using ASCII comparison (thanks to roktas)
   * signal SIGQUIT is now ignored
   * fixed refresh bug when one line is bigger than screen size
   * fixed look_nicklist_min_size and look_nicklist_max_size options
   * fixed refresh bug when changing channel modes
   * jump to next server now saves current channel buffer for each server
   * ctrl-up/ctrl-down keys added to call previous/next command in global
     history (common to all buffers)

Version 0.1.4 (2005-07-30):
   * join and part/quit prefixes (arrows) now displayed with different colors
   * added "irc_highlight" setting, to get highlight with any word
   * fixed auto-rejoin for channels with key
   * fixed /ctcp command (now any command/data allowed)
   * added /amsg command (send text to all channels of all connected servers)
   * fixed SIGSEGV handler (now write a core file by aborting program)
   * fixed statusbar & infobar background refresh problem with some systems
   * added color for private in hotlist (different than color for highlight)
   * added DCC resume and timeout
   * added function for Perl/Python to get DCC list
   * fixed FIFO pipe (command now authorized on a buffer not connected
     to an IRC server)
   * topic completion now decodes UTF-8 string
   * fixed bug with IRC URL on command line (irc://)