@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2005-09-15
+ChangeLog - 2005-09-20
 
 
 Version 0.1.5 (under dev!):
+   * fixed DCC bug: delete failed file only if really empty (on disk)
    * fixed IRC message parser bug
    * fixed scroll problem (screen moving when scrolling and new line
      displayed)
